// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ul> Only one content shown 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
       
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
       
      Section 2
    </button>
    <p>
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </p>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
       
      Section 3
    </button>
  </li>
</ul>
`;

exports[`<ul> Opens contents when clicked 1`] = `
<ul>
  <li
    key="0"
  >
    <button
      onClick={[Function]}
    >
       
      Section 1
    </button>
  </li>
  <li
    key="1"
  >
    <button
      onClick={[Function]}
    >
       
      Section 2
    </button>
    <p>
      Cupiditate tenetur aliquam necessitatibus id distinctio quas nihil ipsam nisi modi!
    </p>
  </li>
  <li
    key="2"
  >
    <button
      onClick={[Function]}
    >
       
      Section 3
    </button>
  </li>
</ul>
`;

exports[`<ul> renders no sections as active by default 1`] = `
<ul>
  <li>
    <button
      onClick={[Function]}
    >
       
      Section 1
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
       
      Section 2
    </button>
  </li>
  <li>
    <button
      onClick={[Function]}
    >
       
      Section 3
    </button>
  </li>
</ul>
`;
